using UnityEngine;

namespace Djeg.Prometheus.Data.Motion.Drag
{
    /// <summary>
    /// Contains the animation needed for a drag.
    /// </summary>
    [System.Serializable]
    public sealed class Animation
    {
        # region Properties

        /// <summary>
        /// The drag boolean name
        /// </summary>
        public string DragingBoolName = "Draging";

        /// <summary>
        /// The drag jump name
        /// </summary>
        public string DragJumpTriggerName = "DragJump";

        /// <summary>
        /// The drag trigger nae
        /// </summary>
        public string DragTriggerName = "Drag";

        # endregion

        # region PropertyAccessors
        # endregion

        # region PublicMethods
        # endregion
    }
}
